fixed keyword spacing on home

--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -236,7 +236,7 @@
     padding: .25rem .75em;
     margin-right: 0.6rem;
     border-radius: 100rem;
-    line-height: 2.75rem;
+    line-height: clamp(2.75rem, calc(2vw + 1rem), 3.3rem);
     
     border: 1.25px solid var(--gray-500);
     color: var(--gray-500);
